# qrag-rust

./: .env.example  Cargo.toml  README.md  build.rs  docker-compose.yaml
docs/: grpc.md  rust.md  tokio.md
proto/: rag.proto
src/: chunker.rs  config.rs  document_loader.rs  grpc_service.rs  llm.rs  main.rs  qdrant_store.rs  rag.rs
